--- a/stylesheet.css
+++ b/stylesheet.css
@@ -97,7 +97,7 @@ padding-right: 0;
 .main{
   margin: 0 auto;
   height: 300px;;
-  background-image: url(IMG_1050.JPG);
+  background-image: url(images/mainimage.jpg);
   background-size: cover;
   background-position: center;
   margin-bottom: 30px;
