--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,5 @@
+@charset "utf-8";
+
 /* ========================================
     リセットcss
 ========================================= */
@@ -28,7 +30,7 @@ footer, header, hgroup, menu, nav, section {
 }
 html{overflow-y: scroll;}
 blockquote, q {quotes: none;}
-blockquote:before, blockquote:after,q:before, q:after {content: ''; content: none;}
+
 input, textarea,{margin: 0; padding: 0;}
 ol, ul{list-style:none;}
 table{border-collapse: collapse; border-spacing:0;}
@@ -40,13 +42,7 @@ a:focus {outline:none;}
 	フロートの解除
 ========================================= */
 
-.clearfix:after {
-  content: ".";
-  display: block;
-  height: 0;
-  clear: both;
-  visibility: hidden;
-}
+
 
 
 
@@ -63,73 +59,95 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 }
 
-.header{
-  height:99px;
-display: flex;
-width: 100%;
-justify-content: space-between;
 
-
-}
-.header h1{
-width: auto;
-  margin-top: 30px;
-}
-.header nav {
-padding-right: 0;
-  margin-top: 56px;
-  float: right;
-
-}
-.header nav li{
-  float: left;
-  margin-left: 20px;
-}
-.header a{
-  color: #555555;
-  text-decoration: none;
-  font-size: 14px;
-  font-weight: bold;
-
-}
-
-
-.main{
-  margin: 0 auto;
-  height: 300px;;
-  background-image: url(images/mainimage.jpg);
-  background-size: cover;
-  background-position: center;
-  margin-bottom: 30px;
-}
-.row{
-  margin: 0 auto;
+/* ========================================
+    ラッパー
+========================================= */
+div#wrapper {
+    width: 960px;
+    height: auto;
+    margin: 0 auto;
 }
 
 
 
-.main2{
-display: flex;
-margin: 0  auto;
+/* ========================================
+    ヘッダー
+========================================= */
+header {
+width:auto;
+    height: 99px;
+		display: flex;
+		justify-content: space-between;
+}
+
+header h1 {
+    width: 213px;
+    height: 39px;
+    margin-top: 30px;
 
 }
-.main2a{
-display: flex;
+
+nav {
+
+    margin-top: 56px;
+}
+nav ul{
+	display: flex;
+
+}
+nav ul li {
+
+    margin-left: 20px;
 }
 
-.left{
-  margin-right: 30px;
-  width: auto;
-  height: auto;
+nav ul li a {
+    color: #555555;
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: bold;
 }
-.left ul li {
+
+
+
+/* ========================================
+    メイン画像
+========================================= */
+div#mainimage {
+width:auto;
+    height: 300px;
+    margin-bottom: 30px;
+		display: flex;
+}
+
+.aaa{
+	max-width: 100%;
+}
+
+
+#main2{
+	display: flex;
+	width: auto;
+	justify-content:space-between;
+}
+/* ========================================
+    レフト
+========================================= */
+#left {
+    width: 280px;
+    height: auto;
+margin-right: 30px;
+}
+
+#left ul li {
     width: 278px;
     height: 48px;
     background-color: #f5fbff;
     margin-bottom: 10px;
     border: 1px solid #63abd4;
 }
-.left ul li a {
+
+div#left ul li a {
     font-size: 16px;
     font-weight: bold;
     color: #555555;
@@ -138,6 +156,7 @@ display: flex;
     padding-left: 50px;
     display: block;
 }
+
 a#icon_tel {
     background: url(images/icon_tel.png) no-repeat 14px center;
 }
@@ -152,43 +171,133 @@ a#icon_voice {
 
 
 
-.right{
-  width: 100%;
-  height: auto;
+
+
+/* ========================================
+    ライト
+========================================= */
+div#right {
+    width: auto;
+    height: auto;
 }
-.right h2 {
+
+div#right h2 {
     font-size: 18px;
     font-weight: bold;
     color: #555555;
     margin-bottom: 15px;
 }
-
-.right dt {
+.list{
+	display: flex;
+}
+div#right dt {
     font-size: 12px;
     color: #a8a8a8;
+    width: 79px;
     line-height: 40px;
     padding-left: 15px;
 }
-.right dd {
+
+div#right dd {
     font-size: 13px;
     color: #555555;
+    width: 556px;
     line-height: 40px;
 }
 
-.main2a:nth-of-type(odd) {
+.list:nth-of-type(odd),
+.list:nth-of-type(odd) {
     background-color: #f5f5f5;
 }
-@media screen and (max-width: 767px) {
-  .main2 {
-    flex-direction: column;
-  }
-  .right dd, .right dt{
-    line-height: 20px;
-  }
-
-  }
 
 
-div.clearfix {
-    clear: both;
+
+
+
+
+
+
+/* ========================================
+    フッター
+========================================= */
+
+
+
+
+footer {
+    width: auto;
+    height: auto;
+    background-color: #63abd4;
+    margin-top: 50px;
+
+}
+
+div#footer_inner {
+    width: 960px;
+    margin: 0 auto;
+    position: relative;
+    padding: 20px 0;
+		display: flex;
+justify-content: space-between;
+}
+
+
+footer ul {
+    display: flex;
+    margin-top: 24px;
+
+}
+
+footer ul li {
+    margin-left: 20px;
+}
+
+footer ul li a {
+    color: white;
+    font-size: 14px;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+
+
+@media screen and (max-width: 960px) {
+	div#wrapper {
+	    width: 95%;
+	    margin: 0 auto;
+	}
+
+
+
+div#right{
+	width:100%;
+}
+div#right dd{
+	width:auto;
+}
+div#footer_inner {
+    width: 95%;
+}
+
+}
+
+@media screen and ( max-width:768px) {
+nav{
+	display: none;
+}
+#main2{
+	flex-direction: column;
+}
+#left{
+	width: 100%;
+}
+#left ul  {
+	display: flex;
+}
+#left ul li {
+	width: 100%;;
+}
+#footer_inner ul{
+	display: none;
+}
 }
